--- a/Catalogo.css
+++ b/Catalogo.css
@@ -96,3 +96,20 @@ h3 {
 .btn-comprar:hover {
     background-color: var(--color-detalle);
 }
+footer {
+    background-color: var(--color1);
+    color: var(--color4);
+    text-align: center;
+    padding: 10px;
+    font-family: sans-serif;
+}
+
+footer p {
+    margin: 0;
+    padding: 5px 0;
+    font-size: 14px;
+}
+
+footer p:last-of-type {
+    color: var(--color5);
+}
