--- a/Catalogo.css
+++ b/Catalogo.css
@@ -56,7 +56,7 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #f3dbc3; /
+    color: #f3dbc3; 
     text-decoration: none;
     font-weight: bold;
     font-size: 18px;
